# code-cov

./: .gitignore  .gitlab-ci.yml  README.md  TESTING.md  TESTING_SETUP.md  docker-compose.yml  run_tests.sh
backend/: Dockerfile  pyproject.toml  pytest.ini  pytest.ini.coverage
backend/scripts/: run_tests.sh
backend/src/: config.py
backend/src/application/dtos/: auth_dtos.py  task_dtos.py  task_list_dtos.py
backend/src/application/use_cases/: auth_use_case.py  checklist_use_case.py  task_list_use_case.py  task_use_case.py
backend/src/domain/entities/: models.py
backend/src/domain/ports/repositories/: base.py
backend/src/infrastructure/logging/: configure.py
backend/src/infrastructure/middleware/: rate_limiter.py
backend/src/infrastructure/persistence/sqlalchemy/: database.py
backend/src/infrastructure/scripts/: init_db.py
backend/src/infrastructure/security/: hashing.py  jwt_token.py
backend/src/infrastructure/services/: storage.py
backend/src/interface/: main.py
backend/src/interface/api/: dependencies.py
backend/tests/: CI_CD_SETUP.md  COVERAGE_GUIDE.md  DOCKER_TESTING.md  INTEGRATION_TESTS_STATUS.md  LOCAL_SETUP.md  README.md  TESTING_GUIDE.md  USER_TESTS_SUMMARY.md  VERIFY_TESTS.md  conftest.py  reproduce_issue.py
backend/tests/e2e/: README.md  conftest.py  test_user_journey.py
backend/tests/integration/: conftest.py  test_auth_api.py  test_checklists_api.py  test_privacy_repro.py  test_tasks_api.py
backend/tests/unit/: test_auth_use_case.py  test_checklist_use_case.py  test_task_use_case.py
docs/: ARCHITECTURE.md
(+30 files in other folders)
