[tool.poetry]
name = "task-tracker-backend"
version = "0.1.0"
description = "A clean architecture task tracker API"
authors = ["Candidate Lucas"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
asyncpg = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.5.3"}
pydantic-settings = "^2.1.0"
alembic = "^1.13.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["argon2"], version = "^1.7.4"}
python-multipart = "^0.0.6"
celery = "^5.3.6"
redis = "^5.0.1"
boto3 = "^1.34.14"
structlog = "^24.1.0"
prometheus-fastapi-instrumentator = "^7.0.0"
tenacity = "^8.2.3"
slowapi = "^0.1.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
pytest-html = "^4.1.1"
httpx = "^0.26.0"
aiosqlite = "^0.19.0"
playwright = "^1.41.0"
black = "^23.12.1"
isort = "^5.13.2"
mypy = "^1.8.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
